fixed package to reference to README instead of README.markdown (symfony plugins strict standart). You can make symlink to README.markdown

--- a/package.xml
+++ b/package.xml
@@ -23,7 +23,7 @@
  <notes>-</notes>
  <contents>
   <dir name="/">
-   <file role="data" name="README.markdown" />
+   <file role="data" name="README" />
    <file role="data" name="LICENSE" />
    <dir name="web">
      <dir name="images">
